--- a/Projekt_Wizualizacja/Properties/Resources.resx
+++ b/Projekt_Wizualizacja/Properties/Resources.resx
@@ -124,8 +124,8 @@
   <data name="Przycisk_Akceptuj1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Przycisk_Akceptuj1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="minut_dodawanie biletow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\minut_dodawanie biletow.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tel_plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_plus.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="thJ7T8ZGJ0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thJ7T8ZGJ0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,8 +142,14 @@
   <data name="ZKM_Gdynia" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZKM_Gdynia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tel_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_orange.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="plus_dodawaniebiletow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plus_dodawaniebiletow.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="minut_dodawanie biletow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\minut_dodawanie biletow.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="znak-plus-w-kwadracie_318-53016" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\znak-plus-w-kwadracie_318-53016.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,11 +169,20 @@
   <data name="Przycisk_BACKSPACE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Przycisk_BACKSPACE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="niebieskietlo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\niebieskietlo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logo_zkm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_zkm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="reklama5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reklama5.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Przycisk_ZAKOŃCZ" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Przycisk_ZAKOŃCZ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Przycisk_BACKSPACE1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Przycisk_BACKSPACE1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tel_play" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_play.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="wstecz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wstecz.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -187,8 +202,8 @@
   <data name="reklama4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reklama4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Przycisk_BACKSPACE3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Przycisk_BACKSPACE3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tel_nju" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_nju.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="karta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\karta.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,11 +217,14 @@
   <data name="koniec" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\koniec.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Przycisk_BACKSPACE1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Przycisk_BACKSPACE1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tel_play1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_play1.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logo_Gdyni" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_Gdyni.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="niebieskietlo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\niebieskietlo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Przycisk_wstecz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Przycisk_wstecz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,17 +238,23 @@
   <data name="Reklama1v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reklama1v2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tel_virgin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_virgin.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="reklama6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reklama6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bez tytułu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bez tytułu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tel_tmobile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tel_tmobile.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="koniec1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\koniec1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Przycisk_ZAKOŃCZ" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Przycisk_ZAKOŃCZ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Przycisk_BACKSPACE3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Przycisk_BACKSPACE3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="a1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,7 +268,7 @@
   <data name="Przycisk_Anuluj1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Przycisk_Anuluj1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo_zkm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo_zkm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pomoc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pomoc.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
